feat: Railway deployment - combined server+bot, gift withdrawal, CryptoBot-only deposit

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,12 @@
 BOT_TOKEN=YOUR_BOT_TOKEN_HERE
 
 # ===== Server =====
+# PORT задаётся Railway автоматически — не нужно менять
 PORT=3000
-WEBAPP_URL=https://your-domain.com
+
+# WEBAPP_URL — после деплоя на Railway вставьте сюда ваш Railway URL
+# Формат: https://ВАШ_ПРОЕКТ.up.railway.app
+WEBAPP_URL=https://your-project.up.railway.app
 
 # ===== CryptoBot =====
 CRYPTOBOT_TOKEN=YOUR_CRYPTOBOT_TOKEN_HERE
