--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "crash-rocket-game",
   "version": "1.0.0",
   "description": "Telegram Mini App - Crash Rocket Game",
-  "main": "server.js",
+  "main": "start.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "bot": "node bot.js"
+    "start": "node start.js",
+    "server": "node server.js",
+    "bot": "node bot.js",
+    "dev": "nodemon start.js"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "better-sqlite3": "^11.0.0",
