--- a/railway.toml
+++ b/railway.toml
@@ -2,9 +2,10 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "node start.js"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 5
+healthcheckPath = "/health"
+healthcheckTimeout = 30
 
 [[mounts]]
 mountPath = "/app/data"
